--- a/src/assets/styles/components/Form/Social.css
+++ b/src/assets/styles/components/Form/Social.css
@@ -1,4 +1,4 @@
-.card svg {
+/* .card svg {
   height: 25px;
 }
 
@@ -96,3 +96,4 @@
 .card .social:hover {
   background-color: rgba(249, 244, 255, 0.774);
 }
+ */
