--- a/src/assets/styles/components/Spinner/Spinner.css
+++ b/src/assets/styles/components/Spinner/Spinner.css
@@ -1,10 +1,11 @@
 .container-spinner {
-  height: 80vh;
+  height: 100%;
   width: 100%;
-  background-color: #fff;
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0.2;
 }
 
 .sk-chase {
