--- a/src/assets/styles/components/Spinner/Spinner.css
+++ b/src/assets/styles/components/Spinner/Spinner.css
@@ -1,11 +1,10 @@
 .container-spinner {
-  height: 100%;
+  height: 85vh;
   width: 100%;
-  background-color: black;
+  background-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0.2;
 }
 
 .sk-chase {
